--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,11 +49,28 @@ jobs:
 
       - name: Tests
         uses: cypress-io/github-action@v6
+        id: e2e-tests
         with:
           browser: firefox
           config-file: cypress-test.config.ts
           start: npm start
           wait-on: 'http://localhost:8000'
+
+      - name: Generate test report
+        id: generate-e2e-report
+        if: always() && steps.e2e-tests.outcome == 'failure'
+        run: |
+          mkdir cypress/screenshots || true
+          npx mochawesome-merge ./cypress/results/mochawesome-report/*.json > tests-report.json
+          npx marge tests-report.json -o cypress/reports/html
+          cp -r cypress/screenshots cypress/reports/html/screenshots
+
+      - name: Upload Cypress report
+        uses: actions/upload-artifact@v4
+        if: always() && steps.generate-e2e-report.outcome == 'success'
+        with:
+          name: Cypress report
+          path: cypress/reports/html
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2.1.1
