--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-plugin-image": "3.13.1",
     "gatsby-plugin-manifest": "5.13.1",
     "gatsby-plugin-offline": "6.13.2",
+    "gatsby-plugin-react-i18next": "3.0.1",
     "gatsby-plugin-robots-txt": "1.8.0",
     "gatsby-plugin-sass": "6.13.1",
     "gatsby-plugin-sharp": "5.13.1",
@@ -57,15 +58,19 @@
     "gatsby-source-graphql": "5.13.1",
     "gatsby-transformer-remark": "6.13.1",
     "gatsby-transformer-sharp": "5.13.1",
+    "i18next": "22.5.1",
     "prismjs": "1.29.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-i18next": "12.3.1",
+    "react-photo-view": "1.2.4"
   },
   "devDependencies": {
     "@types/node": "20.12.11",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "cypress": "13.9.0",
+    "cypress-multi-reporters": "1.6.4",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "3.2.0",
@@ -73,6 +78,9 @@
     "eslint-plugin-prettier": "5.1.3",
     "gh-pages": "6.1.1",
     "markdownlint-cli": "0.40.0",
+    "mochawesome": "7.1.3",
+    "mochawesome-merge": "4.3.0",
+    "mochawesome-report-generator": "6.2.0",
     "prettier": "3.2.5",
     "sass": "1.77.0",
     "stylelint": "16.5.0",
