--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - run: NUXT_APP_BASE_URL=/newblog/ npx nuxt generate --preset github_pages
+      - run: npx nuxt generate --preset github_pages
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -59,6 +59,8 @@ jobs:
         # npm run eslint
 
       - name: Build
+        env:
+          PORTFOLIO_GITHUB_TOKEN: ${{secrets.PORTFOLIO_GITHUB_TOKEN}}
         run: |
           npm run clean
           npm run build
@@ -66,8 +68,7 @@ jobs:
       - name: Tests
         uses: cypress-io/github-action@v6
         id: e2e-tests
-        env:
-          PORTFOLIO_GITHUB_TOKEN: ${{secrets.PORTFOLIO_GITHUB_TOKEN}}
+
         with:
           browser: firefox
           config-file: cypress-test.config.ts
