--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,14 +81,14 @@ jobs:
       - name: Create static folder
         env:
           PORTFOLIO_GITHUB_TOKEN: ${{secrets.PORTFOLIO_GITHUB_TOKEN}}
-        #  if: success() && github.ref_name == 'master'
+        if: success() && github.ref_name == 'master'
         run: |
           npm run clean
           npx nuxt generate --preset github_pages
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
-        # if: success() && github.ref_name == 'master'
+        if: success() && github.ref_name == 'master'
         with:
           path: ./output/public
 
